--- a/Dockerfile.dev.travis
+++ b/Dockerfile.dev.travis
@@ -2,9 +2,9 @@ FROM node:16-alpine
 
 USER node
 
-RUN mkdir -p /app
+RUN mkdir -p /home/node/app
 
-WORKDIR /app
+WORKDIR /home/node/app
 
 COPY --chown=node:node ./package.json ./
 
