--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
   - docker
 
 before_install:
-  - docker build -t saezbaldo/docker-react -f Dockerfile.dev.travis .
+  - docker build -t saezbaldo/docker-react -f Dockerfile.dev .
 
 script:
   - docker run -e CI=true saezbaldo/docker-react npm run test
