--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
   app: "docker-react"
-  env: "Dockerreact-env"
+  env: "dockerreact-env"
   bucket_name: "elasticbeanstalk-us-east-1-493320227173"
   bucket_path: "docker-react"
   on:
