--- a/.travis.yml
+++ b/.travis.yml
@@ -11,10 +11,10 @@ script:
 deploy:
   provider: elasticbeanstalk
   region: "us-east-1"
-  app: "docker-react"
-  env: "dockerreact-env"
+  app: "docker"
+  env: "docker-env"
   bucket_name: "elasticbeanstalk-us-east-1-493320227173"
-  bucket_path: "docker-react"
+  bucket_path: "docker"
   on:
     branch: main
   access_key_id: $AWS_ACCESS_KEY
