--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,10 @@ services:
   - docker
 
 before_install:
-  - docker build -t saezbaldo/docker-react -f Dockerfile.dev .
+  - docker build -t saezbaldo/docker -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true saezbaldo/docker-react npm run test
+  - docker run -e CI=true saezbaldo/docker npm run test
 
 deploy:
   provider: elasticbeanstalk
